// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
  href={null}
  id="storyshots_214"
  media=""
  onClick={null}
  placeholder="{ Card }"
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
    id="storyshots_214-Header"
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 AXrfk"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 kSFTkF"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 hsjMgw"
          fontSize="1.15rem"
          fontWeight="500"
          letterSpacing="0.4px"
        >
          RFP Accepted - Job Added
        </h5>
      </div>
    </div>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
    id="storyshots_214-Body"
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Accepting an RFP converts an RFP to a live Job. Your new Job has been created and will appear on the Job board.
    </p>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
    id={null}
    onClick={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
      id={null}
      rows={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
        disabled={false}
        htmlFor={null}
        id="Done"
        name="Done"
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 egoClY"
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Done
          </label>
        </section>
      </button>
      <button
        className="Button__StyledButton-sc-1v7sls2-0 esKlPI DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
        disabled={false}
        htmlFor={null}
        id="View Job"
        name="View Job"
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 egoClY"
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            View Job
          </label>
        </section>
      </button>
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
        href={null}
        id="storyshots_215"
        media=""
        onClick={null}
        placeholder="{ Card }"
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_215-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 AXrfk"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 kSFTkF"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 hsjMgw"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Are you sure?
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_215-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Are you sure you want to delete all of your user data? You will never be able to get it back.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 esKlPI DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Yes
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
        href={null}
        id="storyshots_216"
        media=""
        onClick={null}
        placeholder="{ Card }"
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_216-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 AXrfk"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 kSFTkF"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 hsjMgw"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Reset Settings?
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_216-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Accept
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 esKlPI DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Cancel
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 fdqEyn"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
        href={null}
        id="storyshots_217"
        media=""
        onClick={null}
        placeholder="{ Card }"
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_217-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 AXrfk"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 kSFTkF"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 hsjMgw"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Reset Settings?
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_217-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Cancel
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 esKlPI DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Accept
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
</section>
`;

exports[` 3`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
        href={null}
        id="storyshots_218"
        media=""
        onClick={null}
        placeholder="{ Card }"
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_218-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 AXrfk"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 kSFTkF"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 hsjMgw"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Reset Settings?
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_218-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 htaMbr DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hDSxZe DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Agree
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
        href={null}
        id="storyshots_219"
        media=""
        onClick={null}
        placeholder="{ Card }"
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_219-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 AXrfk"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 kSFTkF"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 hsjMgw"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Reset Settings?
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id="storyshots_219-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hDSxZe DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 egoClY"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                  onClick={null}
                >
                  Agree
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>,
]
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 btkYQP Card__CardGridWrapper-sc-1g3s676-4 glclQQ"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
    href={null}
    id="storyshots_220"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_220-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 AXrfk"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 kSFTkF"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hsjMgw"
            fontSize="1.15rem"
            fontWeight="500"
            letterSpacing="0.4px"
          >
            Default Dialog
          </h5>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_220-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 esKlPI DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
    href={null}
    id="storyshots_221"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_221-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 AXrfk"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 kSFTkF"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hsjMgw"
            fontSize="1.15rem"
            fontWeight="500"
            letterSpacing="0.4px"
          >
            Successful Dialog
          </h5>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_221-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 grdOPH DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 hDSxZe DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 kusUPT Card__StyledCardWrapper-sc-1g3s676-3 DialogBox__DialogCard-iv0dnf-1 cYUOEk"
    href={null}
    id="storyshots_222"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_222-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 AXrfk"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 kSFTkF"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hsjMgw"
            fontSize="1.15rem"
            fontWeight="500"
            letterSpacing="0.4px"
          >
            Error Dialog
          </h5>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id="storyshots_222-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo DialogBox__ButtonGrid-iv0dnf-0 fuqjTm"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 htaMbr DialogBox__PrimaryButton-iv0dnf-2 eawUbF"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 gyffls DialogBox__SecondaryButton-iv0dnf-3 iGioOm"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
              onClick={null}
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
</section>
`;
